// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterNetwork should render empty 1`] = `
<div>
  <div
    data-testid="FilterNetwork"
  >
    <div
      class="Circle-uw7h4j-0 JkqUV relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800"
      data-testid="network__viewall"
    >
      <div
        class="text-sm font-semibold text-theme-primary-700"
      >
        All
      </div>
      <span
        class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-700"
      >
        <div
          class="sc-bdfBwQ kJrqvM transition-transform "
          height="5"
          width="8"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
        <span />
      </span>
    </div>
    <ul
      class="inline-block"
      data-testid="NetworkOptions"
    />
  </div>
</div>
`;

exports[`FilterNetwork should render public networks 1`] = `
<div>
  <div
    data-testid="FilterNetwork"
  >
    <div
      class="Circle-uw7h4j-0 JkqUV relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800"
      data-testid="network__viewall"
    >
      <div
        class="text-sm font-semibold text-theme-primary-700"
      >
        All
      </div>
      <span
        class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-700"
      >
        <div
          class="sc-bdfBwQ kJrqvM transition-transform "
          height="5"
          width="8"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
        <span />
      </span>
    </div>
    <ul
      class="inline-block"
      data-testid="NetworkOptions"
    >
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="NetworkOption__ARK"
      >
        <div
          class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
          <span
            class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="NetworkOption__LSK"
      >
        <div
          class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              lsk.svg
            </svg>
          </div>
          <span
            class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
          >
            <div
              class="sc-bdfBwQ fdfkzt"
              height="12"
              width="12"
            >
              <svg>
                checkmark.svg
              </svg>
            </div>
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="NetworkOption__ETH"
      >
        <div
          class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              eth.svg
            </svg>
          </div>
          <span
            class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
          >
            <div
              class="sc-bdfBwQ fdfkzt"
              height="12"
              width="12"
            >
              <svg>
                checkmark.svg
              </svg>
            </div>
            <span />
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`FilterNetworks should render empty 1`] = `
<div>
  <div
    class="space-y-6"
  />
</div>
`;

exports[`FilterNetworks should render public and testnet networks 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 text-sm font-bold text-theme-secondary-400"
      >
        Public Networks
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
            >
              <div
                class="sc-bdfBwQ fdfkzt"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 text-sm font-bold text-theme-secondary-400"
      >
        Development Networks
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__LSK"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
            >
              <div
                class="sc-bdfBwQ fdfkzt"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks should render public networks 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 text-sm font-bold text-theme-secondary-400"
      >
        Public Networks
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
            >
              <div
                class="sc-bdfBwQ fdfkzt"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks should toggle a testnet network option 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 text-sm font-bold text-theme-secondary-400"
      >
        Public Networks
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
            >
              <div
                class="sc-bdfBwQ fdfkzt"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 text-sm font-bold text-theme-secondary-400"
      >
        Development Networks
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__LSK"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
            >
              <div
                class="sc-bdfBwQ fdfkzt"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks should toggle view all 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 text-sm font-bold text-theme-secondary-400"
      >
        Public Networks
      </div>
      <div
        class="Circle-uw7h4j-0 JkqUV relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-primary-700 border-theme-primary-700 text-white"
        >
          <div
            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
            height="5"
            width="8"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
            >
              <div
                class="sc-bdfBwQ fdfkzt"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
      <div
        class="mt-4 cursor-pointer text-theme-secondary-text"
      >
        <label>
          <input
            class="Checkbox-sc-17gwqiq-0 iGvDni mr-2"
            color="success"
            data-testid="FilterNetwork__select-all-checkbox"
            type="checkbox"
          />
          Select All
        </label>
      </div>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 text-sm font-bold text-theme-secondary-400"
      >
        Development Networks
      </div>
      <div
        class="Circle-uw7h4j-0 JkqUV relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-700"
        >
          <div
            class="sc-bdfBwQ kJrqvM transition-transform "
            height="5"
            width="8"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__LSK"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
            >
              <div
                class="sc-bdfBwQ fdfkzt"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks should toggle view all 2`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 text-sm font-bold text-theme-secondary-400"
      >
        Public Networks
      </div>
      <div
        class="Circle-uw7h4j-0 JkqUV relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-700"
        >
          <div
            class="sc-bdfBwQ kJrqvM transition-transform "
            height="5"
            width="8"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
            >
              <div
                class="sc-bdfBwQ fdfkzt"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 text-sm font-bold text-theme-secondary-400"
      >
        Development Networks
      </div>
      <div
        class="Circle-uw7h4j-0 JkqUV relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-700"
        >
          <div
            class="sc-bdfBwQ kJrqvM transition-transform "
            height="5"
            width="8"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__LSK"
        >
          <div
            class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
            <span
              class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
            >
              <div
                class="sc-bdfBwQ fdfkzt"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`NetworkOptions should not render unknown networks 1`] = `
<div>
  <ul
    class="inline-block"
    data-testid="NetworkOptions"
  >
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ARK"
    >
      <div
        class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__LSK"
    >
      <div
        class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            lsk.svg
          </svg>
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
        >
          <div
            class="sc-bdfBwQ fdfkzt"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ETH"
    >
      <div
        class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            eth.svg
          </svg>
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
        >
          <div
            class="sc-bdfBwQ fdfkzt"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`NetworkOptions should render available networks options 1`] = `
<div>
  <ul
    class="inline-block"
    data-testid="NetworkOptions"
  >
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ARK"
    >
      <div
        class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__LSK"
    >
      <div
        class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            lsk.svg
          </svg>
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
        >
          <div
            class="sc-bdfBwQ fdfkzt"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ETH"
    >
      <div
        class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            eth.svg
          </svg>
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
        >
          <div
            class="sc-bdfBwQ fdfkzt"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`NetworkOptions should render empty 1`] = `
<div>
  <ul
    class="inline-block"
    data-testid="NetworkOptions"
  />
</div>
`;

exports[`NetworkOptions should render networks that have coin and id defined 1`] = `
<div>
  <ul
    class="inline-block"
    data-testid="NetworkOptions"
  >
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ARK"
    >
      <div
        class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__LSK"
    >
      <div
        class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            lsk.svg
          </svg>
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
        >
          <div
            class="sc-bdfBwQ fdfkzt"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ETH"
    >
      <div
        class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            eth.svg
          </svg>
        </div>
        <span
          class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
        >
          <div
            class="sc-bdfBwQ fdfkzt"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ToggleAllOption should render 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 JkqUV relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800"
    data-testid="network__viewall"
  >
    <div
      class="text-sm font-semibold text-theme-primary-700"
    >
      All
    </div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-700"
    >
      <div
        class="sc-bdfBwQ kJrqvM transition-transform "
        height="5"
        width="8"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
      <span />
    </span>
  </div>
</div>
`;

exports[`ToggleAllOption should render hidden 1`] = `<div />`;

exports[`ToggleAllOption should render selected 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 JkqUV relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800"
    data-testid="network__viewall"
  >
    <div
      class="text-sm font-semibold text-theme-primary-700"
    >
      All
    </div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-primary-700 border-theme-primary-700 text-white"
    >
      <div
        class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
        height="5"
        width="8"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
      <span />
    </span>
  </div>
</div>
`;
